automate the generation of text to make it as easy as possible to add support for new file extensions. fixes #9

--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,9 @@ coverage.xml
 *.pot
 
 # Sphinx documentation
-docs/_build/
+docs/build/
+docs/textract/
+docs/python_package.rst
 
 # vagrant
 .vagrant
