--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@ python:
 
 # install system dependencies here with apt-get. 
 before_install:
-  - ./requirements/debian.sh
+  - sudo ./requirements/debian.sh
 
 # install python dependencies including this package in the travis
 # virtualenv
 install:
-  - ./requirements/python.sh
+  - sudo ./requirements/python.sh
 
 # command to run tests, e.g. python setup.py test
 script:
