--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,6 @@ install:
 # command to run tests, e.g. python setup.py test
 script:
  - ./tests/run_functional_tests.sh
+ - nosetests
  - pep8 textract/ bin/textract
  - cd docs && make html
