--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install:
 
 # command to run tests, e.g. python setup.py test
 script:
+#49TODO
  - ./tests/run_functional_tests.sh
  - nosetests
  - pep8 textract/ bin/textract
