strange importing problems on travis-ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install:
 
 # command to run tests, e.g. python setup.py test
 script:
+ - "python -c 'import xlrd'"
  - nosetests
  - pep8 textract/ bin/textract
  - cd docs && make html
