--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
 script:
   - nosetests --with-coverage --cover-package=textract
   - pep8 textract/ bin/textract
-  - cd docs && make html
+  - cd docs && make html && cd -
 
 # commands to run after the tests successfully complete
 after_success:
