--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -4,9 +4,12 @@ ENV DEBIAN_FRONTEND noninteractive
 ENV REFRESHED_AT 2014-08-12b
 RUN apt-get update
 RUN apt-get install python-pip -y
-ADD . /provision
-RUN /bin/bash /provision/debian.sh
-RUN /bin/bash /provision/python.sh
+ADD . /src
+WORKDIR /src
+RUN pwd
+RUN ls -l
+RUN /bin/bash /src/provision/debian.sh
+RUN /bin/bash /src/provision/python.sh
 RUN mkdir /textract
 VOLUME ["/textract"]
 ENV PATH $PATH:/textract/bin
