updates so tests do not run as root

--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -6,13 +6,11 @@ RUN apt-get update
 RUN apt-get install python-pip -y
 ADD . /src
 WORKDIR /src
-RUN pwd
-RUN ls -l
 RUN /bin/bash /src/provision/debian.sh
 RUN /bin/bash /src/provision/python.sh
-RUN mkdir /textract
-VOLUME ["/textract"]
-ENV PATH $PATH:/textract/bin
-ENV PYTHONPATH /textract
-ENV SRC /textract
-ENTRYPOINT ["/textract/tests/docker_entry.sh"]
+RUN adduser --disabled-password --gecos "" --home=/home/textract textract
+VOLUME ["/home/textract/src"]
+ENV PATH $PATH:/home/textract/src/bin
+ENV PYTHONPATH /home/textract/src
+USER textract
+ENTRYPOINT ["/home/textract/src/tests/run.py"]
