--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,9 @@ docs/textract/
 
 # ignore big testing files that are dynamically downloaded
 tests/pdf/large.pdf
+
+# ignore raw_text.txt files that are dynamically generated during testing
+tests/png/raw_text.txt
+tests/gif/raw_text.txt
+tests/jpg/raw_text.txt
+tests/pdf/ocr_text.txt
