--- a/.gitignore
+++ b/.gitignore
@@ -62,4 +62,7 @@ tests/pdf/large.pdf
 tests/png/raw_text.txt
 tests/gif/raw_text.txt
 tests/jpg/raw_text.txt
+tests/png/standardized_text.txt
+tests/gif/standardized_text.txt
+tests/jpg/standardized_text.txt
 tests/pdf/ocr_text.txt
