--- a/tests/Makefile
+++ b/tests/Makefile
@@ -9,16 +9,15 @@
 
 all: tesseract
 
+# create OCR output from tesseract wherever it is used
 tesseract:
-
-	# create OCR output for all of the image tests
 	tesseract png/raw_text.png png/raw_text > /dev/null
-	tesseract gif/raw_text.gif gif/raw_text > /dev/null
-	tesseract jpg/raw_text.jpg jpg/raw_text > /dev/null
-
-	# create OCR output for all of the standardized image tests
 	tesseract png/standardized_text.png png/standardized_text > /dev/null
+
+	tesseract gif/raw_text.gif gif/raw_text > /dev/null
 	tesseract gif/standardized_text.gif gif/standardized_text > /dev/null
+
+	tesseract jpg/raw_text.jpg jpg/raw_text > /dev/null
 	tesseract jpg/standardized_text.jpg jpg/standardized_text > /dev/null
 
 	# create OCR output for the multi-page pdf test
