--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ install:
 
 # commands to run the testing suite. if any of these fail, travic lets us know
 script:
+  - echo $PATH
   - cd tests && make && cd -
   - nosetests --with-coverage --cover-package=textract
   - pep8 textract/ bin/textract
