manage the changelog updates with bumpversion too

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,3 +14,10 @@ replace = VERSION = "{new_version}"
 [bumpversion:file:docs/conf.py]
 search = version = "{current_version}"
 replace = version = "{new_version}"
+
+[bumpversion:file:docs/changelog.rst]
+search = THANKS FOR CONTRIBUTING; ADD YOUR UNRELEASED CHANGES HERE!
+replace = THANKS FOR CONTRIBUTING; ADD YOUR UNRELEASED CHANGES HERE!
+
+    {new_version}
+    -------------------
