updated pyup to track requirements/python+compile too

--- a/.pyup.yml
+++ b/.pyup.yml
@@ -7,5 +7,7 @@ requirements:
       updates: all
   - requirements/python-dev:
       updates: all
+  - requirements/python+compile:
+      updates: all
 assignees:
   - deanmalmgren
