refactored requirements to get rid of silly python+compile file

--- a/.pyup.yml
+++ b/.pyup.yml
@@ -7,7 +7,7 @@ requirements:
       updates: all
   - requirements/python-dev:
       updates: all
-  - requirements/python+compile:
+  - requirements/python-doc:
       updates: all
 assignees:
   - deanmalmgren
