updated pyup configuration, which was not working for some reason

--- a/.pyup.yml
+++ b/.pyup.yml
@@ -1,6 +1,6 @@
 update: all
 branch: master
-schedule: "every two weeks on Thursday"
+schedule: "every two weeks"
 pin: True
 requirements:
   - requirements/python:
