--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,6 @@ tests/gif/standardized_text.txt
 tests/jpg/standardized_text.txt
 tests/tiff/standardized_text.txt
 tests/pdf/ocr_text.txt
+
+.idea/
+.vscode/
