--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ install:
 script:
   - cd tests && make && cd -
   - nosetests --with-coverage --cover-package=textract
-  - cd tests && pytest
+  - cd tests && pytest && cd -
   - pep8 textract/ bin/textract
   - if [[ $TRAVIS_PYTHON_VERSION == 3.7 ]];
         then cd docs && make html && cd -;
