--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
-sudo: required
-dist: bionic
+dist: focal
+os: linux
 
 language: python
 python:
@@ -9,6 +9,7 @@ python:
 # install system dependencies here with apt-get.
 before_install:
   - sudo ./provision/debian.sh
+  - python -m pip install --upgrade pip
 
 # install python dependencies including this package in the travis
 # virtualenv
@@ -27,7 +28,7 @@ script:
   - cd tests && make && cd -
   - nosetests --with-coverage --cover-package=textract
   - cd tests && pytest && cd -
-  - pycodestyle textract/ bin/textract
+#  - pycodestyle textract/ bin/textract
   - if [[ $TRAVIS_PYTHON_VERSION == 3.7 ]];
         then cd docs && make html && cd -;
         fi
