--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,8 +35,12 @@ Repository = "https://github.com/KyleKing/textract-py3"
 [dependency-groups]
 dev = [
     "bumpversion>=0.6.0",
-    "nose>=1.3.7",
     "pytest>=7.2.1",
+]
+docs = [
+    "sphinx>=7.0",
+    "sphinx-argparse>=0.4",
+    "sphinx-rtd-theme>=2.0",
 ]
 
 [tool.hatch.build.targets.wheel]
