--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ readme = "README.md"
 requires-python = ">=3.9"
 version = "2.1.1"
 dependencies = [
+    "Pillow>=9.0.0",
     "SpeechRecognition>=3.8.1",
     "argcomplete>=1.10.0",
     "beautifulsoup4>=4.8.0",
