--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,9 @@ docs = [
 ]
 
 [tool.commitizen]
+changelog_file = "docs/changelog.rst"
 tag_format = "v$version"
+update_changelog_on_bump = false
 version = "2.1.1"
 version_files = ["pyproject.toml:^version", "textract/__init__.py:^VERSION"]
 
