--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -10,6 +10,25 @@ inputs:
 runs:
   using: composite
   steps:
+    - name: Install system dependencies (Ubuntu)
+      if: runner.os == 'Linux'
+      uses: awalsh128/cache-apt-pkgs-action@v1
+      with:
+        packages: antiword tesseract-ocr sox ghostscript unrtf poppler-utils
+        version: 1.0
+
+    - name: Install system dependencies (macOS)
+      if: runner.os == 'macOS'
+      shell: bash
+      run: |
+        brew install antiword tesseract sox ghostscript unrtf poppler
+
+    - name: Install system dependencies (Windows)
+      if: runner.os == 'Windows'
+      shell: pwsh
+      run: |
+        choco install tesseract ghostscript sox.portable poppler -y
+
     - name: Install uv
       uses: astral-sh/setup-uv@v5
       with:
