--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -14,14 +14,14 @@ runs:
       if: runner.os == 'Linux'
       uses: awalsh128/cache-apt-pkgs-action@v1
       with:
-        packages: antiword tesseract-ocr sox ghostscript unrtf poppler-utils
-        version: 1.0
+        packages: antiword tesseract-ocr sox libsox-fmt-mp3 ghostscript unrtf poppler-utils
+        version: 1.1
 
     - name: Install system dependencies (macOS)
       if: runner.os == 'macOS'
       shell: bash
       run: |
-        brew install antiword tesseract sox ghostscript unrtf poppler
+        brew install antiword tesseract sox lame mad ghostscript unrtf poppler
 
     - name: Install system dependencies (Windows)
       if: runner.os == 'Windows'
