fix: address beautifulsoup warnings and CI flakiness

--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -28,6 +28,8 @@ jobs:
 
       - name: Run tests
         run: uv run pytest
+        env:
+          SKIP_NETWORK_TESTS: "true"
 
   publish:
     name: Publish to PyPI
