--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -17,6 +17,7 @@ jobs:
   test:
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
         python-version: ["3.9", "3.14"]
@@ -27,9 +28,15 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Run tests
+        id: tests
+        continue-on-error: true
         run: uv run pytest
         env:
           SKIP_NETWORK_TESTS: "true"
+
+      - name: Check test results
+        if: steps.tests.outcome == 'failure'
+        run: exit 1
 
   publish:
     name: Publish to PyPI
