--- a/pyproject.toml
+++ b/pyproject.toml
@@ -124,3 +124,8 @@ known-first-party = ['textract']
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
+
+[tool.pytest.ini_options]
+filterwarnings = [
+    "ignore:aifc was removed in Python 3.13:DeprecationWarning:speech_recognition",
+]
