refactor: undo unrelated changes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,7 +91,6 @@ ignore = [
   'TRY003', # Avoid specifying long messages outside the exception class
 ]
 preview = true
-select = ['ALL']
 unfixable = [
   'ERA001', # Commented out code
 ]
@@ -121,6 +120,10 @@ known-first-party = ['textract']
   'PT004', # flake8-pytest-style: fixture does not return
   'S101', # Use of `assert` detected
 ]
+
+
+[tool.ruff.format]
+quote-style = 'single'
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
