refactor: remove act, restore pyup (temporarily), and remove ruff config

--- a/.gitignore
+++ b/.gitignore
@@ -61,9 +61,4 @@ docs/textract/
 # ignore big testing files that are dynamically downloaded
 tests/pdf/large.pdf
 
-# OCR-generated test fixtures are committed to VCS but can be regenerated
-# using `mise run test:fixtures` or `cd tests && make`
-
-# Act (local GitHub Actions testing)
-.secrets
-.env.act
+# OCR-generated test fixtures are committed to VCS but can be regenerated using `cd tests && make`
