docs: standardize on CI-based changelogs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ docs = [
 [tool.commitizen]
 changelog_file = "docs/changelog.rst"
 tag_format = "v$version"
-update_changelog_on_bump = false
+update_changelog_on_bump = true
 version = "1.6.4"
 version_files = ["pyproject.toml:^version", "textract/__init__.py:^VERSION"]
 
